<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FiveTenKGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game_str">新建游戏</string>
    <string name="join_game_str">加入游戏</string>
    <string name="help_str">帮助</string>
    <string name="setting_str">设置</string>
    <string name="scan_qrcode_str">二维码扫描</string>
    <string name="join_str">加入</string>
    <string name="waiting_str">等待游戏</string>
    <string name="ready_player_str">当前游戏人数：</string>
    <string name="input_server_ip_hint">输入服务器地址</string>
    <string name="confirm_str">确定</string>
    <string name="start_game_str">开始游戏</string>
    <string name="my_ip_addr_str">我的ip地址：</string>
    <string name="ip_input_error_str">请输入正确ip</string>
    <string name="help_rule_str">单张：任意一张单牌。
	    						\n顺子：任意五张或者五张以上点数相连的牌，2不能出现在顺子中。
	    						\n对子：任意两张点数相同的牌。
								\n连对：两对或两对以上点数相连的牌，如：5566。2不能出现在连对中。
								\n三张：任意三张点数相同的牌。
								\n三顺：两组或两组以上点数相连的三张牌，如：555666；555666777。2不能出现在三顺中。
								\n三带一：三张+一张和三张本身点数不同的牌，如555+7。
								\n三带二：三张+一对（对子）牌，如555+77
								\n三顺带一：三顺+数量相同的，和三顺点数不同的单张牌（单张之间不可以重复），如：555666+89
								\n三顺带二：三顺+数量相同的，和三顺点数不同的对子牌（对子之间不可以重复），如555666+8899
								\n五十K：单张的5、10、K组成的牌型。
								\n纯五十K：单张的5、10、K组成的牌型，且三张牌的花色相同。
								\n炸弹：四张点数相同的牌。如6666。</string>
    <string name="background_music_str">背景音乐</string>
    <string name="music_volume_str">音量大小</string>
    <string name="open_str">开</string>
    <string name="close_str">关</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="qrcode_settting_str">二维码扫描</string>
    <string name="time_out_str"></string>

</resources>